// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GroupsWithinCard component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row undefined AdminCard css-tt2wqz-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1v3ltag-MuiGrid-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Title
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-12 css-1wj9vbk-MuiGrid-root"
            >
              <div
                data-analyticsid="rek-title-container"
                data-testid="rek-title-container"
                id="rek-title-container"
              >
                <span>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                    style="opacity: 0.666;"
                  >
                    Formatted title
                    <span>
                       *
                    </span>
                  </span>
                </span>
                <div
                  class="MuiTiptap-FieldContainer-root MuiTiptap-RichTextField-root MuiTiptap-RichTextField-outlined MuiTiptap-FieldContainer-outlined MuiBox-root css-v85zkh-MuiTiptap-FieldContainer-root-MuiTiptap-RichTextField-root"
                >
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiTiptap-MenuBar-root MuiTiptap-RichTextField-menuBar MuiTiptap-MenuBar-nonSticky MuiCollapse-entered css-cz84b8-MuiCollapse-root-MuiTiptap-MenuBar-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiTiptap-MenuBar-content MuiTiptap-RichTextField-menuBarContent css-1go9yyq-MuiTiptap-MenuBar-content"
                        >
                          <div
                            class="MuiTiptap-MenuControlsContainer-root MuiBox-root css-bllqbn-MuiTiptap-MenuControlsContainer-root"
                          >
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + B"
                                  aria-label="Bold"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Bold"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="FormatBoldIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42M10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + I"
                                  aria-label="Italic"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Italic"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="FormatItalicIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + U"
                                  aria-label="Underline"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Underline"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="FormatUnderlinedIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12 17c3.31 0 6-2.69 6-6V3h-2.5v8c0 1.93-1.57 3.5-3.5 3.5S8.5 12.93 8.5 11V3H6v8c0 3.31 2.69 6 6 6m-7 2v2h14v-2z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + Shift + S"
                                  aria-label="Strikethrough"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Strikethrough"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="StrikethroughSIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M6.85 7.08C6.85 4.37 9.45 3 12.24 3c1.64 0 3 .49 3.9 1.28.77.65 1.46 1.73 1.46 3.24h-3.01c0-.31-.05-.59-.15-.85-.29-.86-1.2-1.28-2.25-1.28-1.86 0-2.34 1.02-2.34 1.7 0 .48.25.88.74 1.21.38.25.77.48 1.41.7H7.39c-.21-.34-.54-.89-.54-1.92M21 12v-2H3v2h9.62c1.15.45 1.96.75 1.96 1.97 0 1-.81 1.67-2.28 1.67-1.54 0-2.93-.54-2.93-2.51H6.4c0 .55.08 1.13.24 1.58.81 2.29 3.29 3.3 5.67 3.3 2.27 0 5.3-.89 5.3-4.05 0-.3-.01-1.16-.48-1.94H21z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + ,"
                                  aria-label="Subscript"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Subscript"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="SubscriptIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M22 18h-2v1h3v1h-4v-2c0-.55.45-1 1-1h2v-1h-3v-1h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1M5.88 18h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 4h-2.68l-3.07 4.99h-.12L8.85 4H6.19l4.32 6.73z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + ."
                                  aria-label="Superscript"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Superscript"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="SuperscriptIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M22 7h-2v1h3v1h-4V7c0-.55.45-1 1-1h2V5h-3V4h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1M5.88 20h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 6h-2.68l-3.07 4.99h-.12L8.85 6H6.19l4.32 6.73z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <div
                              aria-orientation="vertical"
                              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiTiptap-MenuDivider-root css-1l845hu-MuiDivider-root-MuiTiptap-MenuDivider-root"
                              role="separator"
                            />
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-label="Change case"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Change case"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="LetterCaseIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <g
                                      transform="scale(0.24)"
                                    >
                                      <path
                                        d="M46.098743 74.271188L42.411901 60.584975H23.888853L20.202011 74.271188H8.597344L26.531829 16.618645H39.702294L57.70341 74.271188H46.098743ZM39.835553 50.458181C34.738384 31.846436 34.083193 29.402469 33.172586 25.554789C31.77154 31.568055 29.128413 41.512086 26.598466 50.458181H39.835553Z"
                                      />
                                      <path
                                        d="M87.355201 74.271188L84.861354 65.815631H72.332028L69.838181 74.271188H61.988574L74.119785 38.652543H83.028527L95.204809 74.271188H87.355201ZM83.118666 59.559139C79.670848 48.060511 79.227665 46.55059 78.611714 44.173433C77.860556 47.270707 76.380806 52.313202 74.164855 59.559139H83.118666Z"
                                      />
                                    </g>
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-label="Remove inline formatting"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Remove inline formatting"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="FormatClearIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M3.27 5 2 6.27l6.97 6.97L6.5 19h3l1.57-3.66L16.73 21 18 19.73 3.55 5.27zM6 5v.18L8.82 8h2.4l-.72 1.68 2.1 2.1L14.21 8H20V5z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span>
                              <span
                                class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                              >
                                <span
                                  class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                  data-mui-internal-clone-element="true"
                                >
                                  <button
                                    aria-label="Insert special character"
                                    aria-pressed="false"
                                    class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                    tabindex="0"
                                    type="button"
                                    value="Insert special character"
                                  >
                                    <span
                                      style="font-size: 20px; line-height: 1; font-family: serif;"
                                    >
                                      Ω
                                    </span>
                                  </button>
                                </span>
                              </span>
                            </span>
                            <div
                              aria-orientation="vertical"
                              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiTiptap-MenuDivider-root css-1l845hu-MuiDivider-root-MuiTiptap-MenuDivider-root"
                              role="separator"
                            />
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + Z"
                                  aria-label="Undo"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  tabindex="0"
                                  type="button"
                                  value="Undo"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="UndoIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                            <span
                              class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                            >
                              <span
                                class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                                data-mui-internal-clone-element="true"
                              >
                                <button
                                  aria-description="Ctrl + Shift + Z"
                                  aria-label="Redo"
                                  aria-pressed="false"
                                  class="MuiButtonBase-root Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                                  disabled=""
                                  tabindex="-1"
                                  type="button"
                                  value="Redo"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                                    data-testid="RedoIcon"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7z"
                                    />
                                  </svg>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiTiptap-RichTextContent-root MuiTiptap-RichTextField-content MuiTiptap-RichTextContent-editable css-13kfccc-MuiTiptap-RichTextContent-root"
                  >
                    <div
                      class="tiptap ProseMirror"
                      contenteditable="true"
                      data-testid="rek-title"
                      id="rek-title"
                      tabindex="0"
                      translate="no"
                    >
                      <p>
                        <br
                          class="ProseMirror-trailingBreak"
                        />
                      </p>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="MuiTiptap-FieldContainer-notchedOutline css-f0dl5j-MuiTiptap-FieldContainer-notchedOutline"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupsWithoutCard component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-12 css-1wj9vbk-MuiGrid-root"
    >
      <div
        data-analyticsid="rek-title-container"
        data-testid="rek-title-container"
        id="rek-title-container"
      >
        <span>
          <span
            class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
            style="opacity: 0.666;"
          >
            Formatted title
            <span>
               *
            </span>
          </span>
        </span>
        <div
          class="MuiTiptap-FieldContainer-root MuiTiptap-RichTextField-root MuiTiptap-RichTextField-outlined MuiTiptap-FieldContainer-outlined MuiBox-root css-v85zkh-MuiTiptap-FieldContainer-root-MuiTiptap-RichTextField-root"
        >
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiTiptap-MenuBar-root MuiTiptap-RichTextField-menuBar MuiTiptap-MenuBar-nonSticky MuiCollapse-entered css-cz84b8-MuiCollapse-root-MuiTiptap-MenuBar-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiTiptap-MenuBar-content MuiTiptap-RichTextField-menuBarContent css-1go9yyq-MuiTiptap-MenuBar-content"
                >
                  <div
                    class="MuiTiptap-MenuControlsContainer-root MuiBox-root css-bllqbn-MuiTiptap-MenuControlsContainer-root"
                  >
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + B"
                          aria-label="Bold"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Bold"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="FormatBoldIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42M10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + I"
                          aria-label="Italic"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Italic"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="FormatItalicIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + U"
                          aria-label="Underline"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Underline"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="FormatUnderlinedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 17c3.31 0 6-2.69 6-6V3h-2.5v8c0 1.93-1.57 3.5-3.5 3.5S8.5 12.93 8.5 11V3H6v8c0 3.31 2.69 6 6 6m-7 2v2h14v-2z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + Shift + S"
                          aria-label="Strikethrough"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Strikethrough"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="StrikethroughSIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6.85 7.08C6.85 4.37 9.45 3 12.24 3c1.64 0 3 .49 3.9 1.28.77.65 1.46 1.73 1.46 3.24h-3.01c0-.31-.05-.59-.15-.85-.29-.86-1.2-1.28-2.25-1.28-1.86 0-2.34 1.02-2.34 1.7 0 .48.25.88.74 1.21.38.25.77.48 1.41.7H7.39c-.21-.34-.54-.89-.54-1.92M21 12v-2H3v2h9.62c1.15.45 1.96.75 1.96 1.97 0 1-.81 1.67-2.28 1.67-1.54 0-2.93-.54-2.93-2.51H6.4c0 .55.08 1.13.24 1.58.81 2.29 3.29 3.3 5.67 3.3 2.27 0 5.3-.89 5.3-4.05 0-.3-.01-1.16-.48-1.94H21z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + ,"
                          aria-label="Subscript"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Subscript"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="SubscriptIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M22 18h-2v1h3v1h-4v-2c0-.55.45-1 1-1h2v-1h-3v-1h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1M5.88 18h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 4h-2.68l-3.07 4.99h-.12L8.85 4H6.19l4.32 6.73z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + ."
                          aria-label="Superscript"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Superscript"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="SuperscriptIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M22 7h-2v1h3v1h-4V7c0-.55.45-1 1-1h2V5h-3V4h3c.55 0 1 .45 1 1v1c0 .55-.45 1-1 1M5.88 20h2.66l3.4-5.42h.12l3.4 5.42h2.66l-4.65-7.27L17.81 6h-2.68l-3.07 4.99h-.12L8.85 6H6.19l4.32 6.73z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <div
                      aria-orientation="vertical"
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiTiptap-MenuDivider-root css-1l845hu-MuiDivider-root-MuiTiptap-MenuDivider-root"
                      role="separator"
                    />
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="Change case"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Change case"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="LetterCaseIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <g
                              transform="scale(0.24)"
                            >
                              <path
                                d="M46.098743 74.271188L42.411901 60.584975H23.888853L20.202011 74.271188H8.597344L26.531829 16.618645H39.702294L57.70341 74.271188H46.098743ZM39.835553 50.458181C34.738384 31.846436 34.083193 29.402469 33.172586 25.554789C31.77154 31.568055 29.128413 41.512086 26.598466 50.458181H39.835553Z"
                              />
                              <path
                                d="M87.355201 74.271188L84.861354 65.815631H72.332028L69.838181 74.271188H61.988574L74.119785 38.652543H83.028527L95.204809 74.271188H87.355201ZM83.118666 59.559139C79.670848 48.060511 79.227665 46.55059 78.611714 44.173433C77.860556 47.270707 76.380806 52.313202 74.164855 59.559139H83.118666Z"
                              />
                            </g>
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="Remove inline formatting"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Remove inline formatting"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="FormatClearIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3.27 5 2 6.27l6.97 6.97L6.5 19h3l1.57-3.66L16.73 21 18 19.73 3.55 5.27zM6 5v.18L8.82 8h2.4l-.72 1.68 2.1 2.1L14.21 8H20V5z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span>
                      <span
                        class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                      >
                        <span
                          class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Insert special character"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                            tabindex="0"
                            type="button"
                            value="Insert special character"
                          >
                            <span
                              style="font-size: 20px; line-height: 1; font-family: serif;"
                            >
                              Ω
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                    <div
                      aria-orientation="vertical"
                      class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiTiptap-MenuDivider-root css-1l845hu-MuiDivider-root-MuiTiptap-MenuDivider-root"
                      role="separator"
                    />
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + Z"
                          aria-label="Undo"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          tabindex="0"
                          type="button"
                          value="Undo"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="UndoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                    <span
                      class="MuiTiptap-MenuButton-root css-2rzjok-MuiTiptap-MenuButton-root"
                    >
                      <span
                        class="MuiTiptap-MenuButtonTooltip-contentWrapper css-lnwhtn-MuiTiptap-MenuButtonTooltip-contentWrapper"
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-description="Ctrl + Shift + Z"
                          aria-label="Redo"
                          aria-pressed="false"
                          class="MuiButtonBase-root Mui-disabled MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard css-19q5u3q-MuiButtonBase-root-MuiToggleButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                          value="Redo"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTiptap-MenuButton-icon css-8sb1vr-MuiSvgIcon-root-MuiTiptap-MenuButton-icon"
                            data-testid="RedoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7z"
                            />
                          </svg>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiTiptap-RichTextContent-root MuiTiptap-RichTextField-content MuiTiptap-RichTextContent-editable css-13kfccc-MuiTiptap-RichTextContent-root"
          >
            <div
              class="tiptap ProseMirror"
              contenteditable="true"
              data-testid="rek-title"
              id="rek-title"
              tabindex="0"
              translate="no"
            >
              <p>
                <br
                  class="ProseMirror-trailingBreak"
                />
              </p>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="MuiTiptap-FieldContainer-notchedOutline css-f0dl5j-MuiTiptap-FieldContainer-notchedOutline"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section component should render default view 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row undefined AdminCard css-tt2wqz-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1v3ltag-MuiGrid-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Title
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section component should render default view 2`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-1 css-1yvsbrk-MuiGrid-root"
  />
</div>
`;
